<resources>
    <string name="app_name">ComicHeros</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="character_image">Character Image</string>
    <string name="episodes">Episodes</string>
    <string name="gender">Gender:</string>
    <string name="icon">Icon</string>
</resources>