<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.login.LoginFragment">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center"
       android:padding="8dp">

       <ImageView
           android:src="@drawable/baseline_catching_pokemon_24"
           android:layout_gravity="center"
           android:layout_width="96dp"
           android:layout_height="96dp"
           android:contentDescription="@string/icon"/>

       <androidx.legacy.widget.Space
           android:layout_width="wrap_content"
           android:layout_height="8dp"/>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/edEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
               android:hint="@string/email"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:passwordToggleEnabled="true"
           style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/edPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:hint="@string/password"/>
       </com.google.android.material.textfield.TextInputLayout>
       <androidx.legacy.widget.Space
           android:layout_width="wrap_content"
           android:layout_height="8dp"/>
       <Button
           android:id="@+id/btnLogin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:textSize="18sp"
           android:layout_marginStart="18dp"
           android:layout_marginEnd="18dp"
           android:text="@string/login"/>

   </LinearLayout>

</FrameLayout>