<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailFragment">

    <ProgressBar
        android:id="@+id/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingTop="8dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/lvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/character_image"
                android:minHeight="256dp" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/tvName"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSpecies"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="start" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvStatus"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textColor="#4CAF50"
                    android:paddingEnd="12dp"
                    android:paddingStart="0dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLocation"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_gravity="start" />

                <androidx.legacy.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/episodes"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEpisodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>